# strain-wave-simulation

./: README.md  pyproject.toml
docs/: ACOUSTIC_MODELS.md  MATERIALS_PROVENANCE.md  PHYSICS_ROADMAP.md  STRAIN_PROFILE.md  VALIDATION.md  fd_courant_acceptance.json  physics_acceptance.json
docs/images/: README.md
scripts/: demo_courant_convergence.py  plot_fig3_strain_split.py  run.py  validate_fd_courant.py  validate_physics.py  validate_split.py  validation_matrix.py
src/strain_wave/: __init__.py  acceptance.py  cli.py  config.py  io.py  pipeline.py  plotting.py  presets.py
src/strain_wave/materials/: __init__.py
src/strain_wave/models/: __init__.py  base.py  courant_fd.py  result.py  ttm_cr_gaas.py  ttm_cr_gaas_solver.py  ttm_dalembert_cr_gaas.py  ttm_dalembert_cr_substrate.py  ttm_fd_courant_cr_gaas.py
tests/: test_courant_fd.py  test_physics_acceptance.py  test_smoke.py
