[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strain-wave-simulation"
version = "0.1.0"
description = "Strain and elastic wave simulation for laser-excited film/substrate systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "numba",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
strain-wave-simulation = "strain_wave.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
